--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 </head>
 
 <body>
-    <h1>The Psychic Game!</h1>
-
-    <p>Guess What Letter I'm Thinking Of:</p>
-    <p id="wins">Wins:</p>
-    <p id="losses">Losses:</p>
-    <p id="guessesLeft">Guesses Left:</p>
-    <p id="userGuesses">Guesses So Far:</p>
-
-
-
+    <div class="container">
+        <h1>The Psychic Game!</h1>
+            <p>Guess What Letter I'm Thinking Of:</p>
+            <p id="wins">Wins:</p>
+            <p id="losses">Losses:</p>
+            <p id="guessesLeft">Guesses Left:</p>
+            <p id="userGuesses">Guesses So Far:</p>
+    </div>
     <script src="assets/javascript.js"></script>
 </body>
 
